--- a/anjali.html
+++ b/anjali.html
@@ -297,7 +297,7 @@
     <div class="content">
       <div class="section">
         <div class="section-title"><i class="fa-regular fa-address-card"></i><span>Professional Summary</span></div>
-        <p><strong>M.Tech in Data Science</strong> from <strong>IIIT Lucknow</strong>, with around <strong>3 years</strong> of expertise in delivering AI-driven solutions across finance, banking and environmental sectors. Skilled in Machine Learning, Deep Learning, Generative AI, LLMs, NLP, RAG, vector databases, and MLOps, with hands-on expertise in Python, TensorFlow, FastAPI, R, SQL and cloud platforms (AWS, Azure, GCP). Proven ability to design and deploy scalable ML pipelines, working with tools like Databricks, ML Studio, SageMaker, Bedrock, Vertex AI, LangChain, LangGraph, CrewAI, Hugging Face, Docker, and Kubernetes. Experienced in building robust ETL workflows and delivering analytics through Tableau and Power BI. Passionate about leveraging AI to drive automation, innovation, and business value.</p>
+        <p><strong>M.Tech in Data Science</strong> from <strong>IIIT Lucknow</strong>, with around <strong>3 years</strong> of expertise in delivering AI-driven solutions across finance, banking and environmental sectors. Skilled in Machine Learning, Deep Learning, Generative AI, LLMs, NLP, RAG, vector databases, and MLOps, with hands-on expertise in Python, C++, TensorFlow, FastAPI, R, SQL and cloud platforms (AWS, Azure, GCP). Proven ability to design and deploy scalable ML pipelines, working with tools like Databricks, ML Studio, SageMaker, Bedrock, Vertex AI, LangChain, LangGraph, CrewAI, Hugging Face, Docker, and Kubernetes. Experienced in building robust ETL workflows and delivering analytics through Tableau and Power BI. Passionate about leveraging AI to drive automation, innovation, and business value.</p>
       </div>
       <div class="section">
         <div class="section-title"><i class="fas fa-graduation-cap"></i><span>Education</span></div>
@@ -353,7 +353,7 @@
           <ul>
             <li>Built sophisticated multi-agent system leveraging large language models and small language models techniques, reducing manual workflow processes by 70% through intelligent task automation and decision-making capabilities.</li>
             <li>Applied comprehensive AI Governance frameworks, including bias detection, fairness metrics, and ethical deployment guidelines, ensuring responsible AI implementation across enterprise-level production systems.</li>
-            <li><strong>Key Skills:</strong> Python, RAG, Generative AI, FineTuning, Machine Learning, NLP, LangChain, LangGraph, AWS</li>
+            <li><strong>Key Skills:</strong> Python, RAG, Generative AI, C++, FineTuning, Machine Learning, NLP, LangChain, LangGraph, GCP</li>
           </ul>
         </div>
         <div class="project">
@@ -361,7 +361,7 @@
           <ul>
             <li>Deployed advanced text summarization system using transformer-based models and custom attention mechanisms, improving document processing workflows by 80% through intelligent content extraction and contextual understanding.</li>
             <li>Built interactive conversational AI interface for intelligent document querying, implementing vector databases, semantic search capabilities, and natural language understanding for enhanced user experience.</li>
-            <li><strong>Key Skills:</strong> Python, Data Mining, NLP, LangChain, LangGraph, Vector Databases, Semantic Search, Azure</li>
+            <li><strong>Key Skills:</strong> Python, Data Mining, NLP, LangChain, LangGraph, Vector Databases, C++, Semantic Search, Azure</li>
           </ul>
         </div>
         <div class="project">
@@ -377,7 +377,7 @@
           <ul>
             <li>Developed sophisticated fraud detection system using ensemble machine learning methods and anomaly detection algorithms, achieving 95%+ accuracy in identifying fraudulent transactions across large-scale financial datasets.</li>
             <li>Reduced manual audit processing time by 65% through intelligent automation workflows incorporating OCR technology, pattern recognition, and rule-based validation systems for enhanced operational efficiency.</li>
-            <li><strong>Key Skills:</strong> Python, Data Analysis, Data Mining, Data Modeling, Deep Learning, SQL, Excel, Power BI, Azure</li>
+            <li><strong>Key Skills:</strong> Python, Data Analysis, Data Mining, Data Modeling, Deep Learning, SQL, Excel, Power BI, AWS</li>
           </ul>
         </div>
       </div>
@@ -386,7 +386,7 @@
         <div class="skills-list">
           <ul>
             <li><strong>Data Science & AI:</strong> Generative AI, Large Language Models (LLMs), Small Language Models (SLMs), Foundation Models, Fine-tuning, Retrieval-Augmented Generation (RAG), Prompt Engineering, Natural Language Processing (NLP), Transformers, Text Analytics, Sentiment Analysis, Named Entity Recognition (NER), Multi-modal AI, Machine Learning, Deep Learning, Time Series Analysis & Forecasting, Marketing Mix Modeling (MMM), Reinforcement Learning, Computer Vision, Convolutional Neural Networks (CNNs), OpenCV, Statistical Modeling, Hypothesis Testing, Synthetic Data Generation, AutoML, Model Monitoring, Responsible AI, AI Governance</li>
-            <li><strong>Programming & Frameworks:</strong> Python, R, SQL, TensorFlow, PyTorch, Scikit-learn, Keras, LangChain, LangGraph, CrewAI, AutoGen, Hugging Face, LlamaIndex, FastAPI, Flask, Django, RESTful API Development, GraphQL, Pandas, NumPy, SciPy, StatsModels, Streamlit, Bash, Shell Scripting</li>
+            <li><strong>Programming & Frameworks:</strong> Python, C++, R, SQL, TensorFlow, PyTorch, Scikit-learn, Keras, LangChain, LangGraph, CrewAI, AutoGen, Hugging Face, LlamaIndex, FastAPI, Flask, Django, RESTful API Development, GraphQL, Pandas, NumPy, SciPy, StatsModels, Streamlit, Bash, Shell Scripting</li>
             <li><strong>Cloud & Databases:</strong> AWS (Bedrock, SageMaker, Redshift, Athena, S3, EC2, Lambda, EMR, Glue), Azure (Synapse, Databricks, ML Studio), GCP (BigQuery, Vertex AI, Dataflow), Snowflake, PostgreSQL, MySQL, MongoDB, Pinecone, Chroma, Milvus, ETL Pipelines</li>
             <li><strong>Visualization & BI Tools:</strong> Tableau, Power BI, Matplotlib, Seaborn, Plotly</li>
             <li><strong>Tools, DevOps & Version Control:</strong> Git, GitHub, GitLab, Bitbucket, Docker, Kubernetes, CI/CD for ML Pipelines</li>
