--- a/anjali.html
+++ b/anjali.html
@@ -377,7 +377,7 @@
           <ul>
             <li>Developed sophisticated fraud detection system using ensemble machine learning methods and anomaly detection algorithms, achieving 95%+ accuracy in identifying fraudulent transactions across large-scale financial datasets.</li>
             <li>Reduced manual audit processing time by 65% through intelligent automation workflows incorporating OCR technology, pattern recognition, and rule-based validation systems for enhanced operational efficiency.</li>
-            <li><strong>Key Skills:</strong> Python, Data Analysis, Data Mining, Data Modeling, Deep Learning, SQL, Excel, Power BI, AWS</li>
+            <li><strong>Key Skills:</strong> Python, Data Analysis, Data Mining, Data Modeling, Deep Learning, SQL, Excel, Power BI, GCP</li>
           </ul>
         </div>
       </div>
