--- a/anjali.html
+++ b/anjali.html
@@ -353,7 +353,7 @@
           <ul>
             <li>Built sophisticated multi-agent system leveraging large language models and small language models techniques, reducing manual workflow processes by 70% through intelligent task automation and decision-making capabilities.</li>
             <li>Applied comprehensive AI Governance frameworks, including bias detection, fairness metrics, and ethical deployment guidelines, ensuring responsible AI implementation across enterprise-level production systems.</li>
-            <li><strong>Key Skills:</strong> Python, RAG, Generative AI, C++, FineTuning, Machine Learning, NLP, LangChain, LangGraph, GCP</li>
+            <li><strong>Key Skills:</strong> Python, RAG, Generative AI, C++, FineTuning, Machine Learning, NLP, LangChain, LangGraph, AWS SageMaker, AWS Bedrock, AWS S3, AWS Athena, AWS Glue</li>
           </ul>
         </div>
         <div class="project">
@@ -361,7 +361,7 @@
           <ul>
             <li>Deployed advanced text summarization system using transformer-based models and custom attention mechanisms, improving document processing workflows by 80% through intelligent content extraction and contextual understanding.</li>
             <li>Built interactive conversational AI interface for intelligent document querying, implementing vector databases, semantic search capabilities, and natural language understanding for enhanced user experience.</li>
-            <li><strong>Key Skills:</strong> Python, Data Mining, NLP, LangChain, LangGraph, Vector Databases, C++, Semantic Search, Azure</li>
+            <li><strong>Key Skills:</strong> Python, Data Mining, NLP, LangChain, LangGraph, Vector Databases, C++, Semantic Search, Azure Data Factory, Azure Databricks, Azure Machine Learning Studio, Azure SQL Database</li>
           </ul>
         </div>
         <div class="project">
@@ -369,7 +369,7 @@
           <ul>
             <li>Designed comprehensive deep learning-based waste classification system using convolutional neural networks and transfer learning, achieving 95%+ accuracy across multiple waste categories for environmental sustainability applications.</li>
             <li>Created scalable ML pipeline architecture for real-time waste sorting, incorporating edge computing deployment, IoT sensor integration, and automated feedback mechanisms for continuous model improvement.</li>
-            <li><strong>Key Skills:</strong> Python, Data Analysis, Data Mining, Data Modeling, Deep Learning, SQL, Excel, Power BI, Azure</li>
+            <li><strong>Key Skills:</strong> Python, Data Analysis, Data Mining, Data Modeling, Deep Learning, SQL, Excel, Power BI, Azure Data Factory, Azure Databricks, Azure Machine Learning Studio, Azure SQL Database</li>
           </ul>
         </div>
         <div class="project">
@@ -377,7 +377,7 @@
           <ul>
             <li>Developed sophisticated fraud detection system using ensemble machine learning methods and anomaly detection algorithms, achieving 95%+ accuracy in identifying fraudulent transactions across large-scale financial datasets.</li>
             <li>Reduced manual audit processing time by 65% through intelligent automation workflows incorporating OCR technology, pattern recognition, and rule-based validation systems for enhanced operational efficiency.</li>
-            <li><strong>Key Skills:</strong> Python, Data Analysis, Data Mining, Data Modeling, Deep Learning, SQL, Excel, Power BI, GCP</li>
+            <li><strong>Key Skills:</strong> Python, Data Analysis, Data Mining, Data Modeling, Deep Learning, SQL, Excel, Power BI, AWS SageMaker, AWS Bedrock, AWS S3, AWS Athena, AWS Glue</li>
           </ul>
         </div>
       </div>
