--- a/anjali.html
+++ b/anjali.html
@@ -361,7 +361,7 @@
           <ul>
             <li>Deployed advanced text summarization system using transformer-based models and custom attention mechanisms, improving document processing workflows by 80% through intelligent content extraction and contextual understanding.</li>
             <li>Built interactive conversational AI interface for intelligent document querying, implementing vector databases, semantic search capabilities, and natural language understanding for enhanced user experience.</li>
-            <li><strong>Key Skills:</strong> Python, Data Mining, NLP, LangChain, LangGraph, Vector Databases, C++, Semantic Search, Azure Data Factory, Databricks, Azure ML Studio, Azure SQL</li>
+            <li><strong>Key Skills:</strong> Python, Data Mining, NLP, LangChain, LangGraph, Vector Databases, C++, Semantic Search, Azure Data Factory, Databricks, Azure ML Studio</li>
           </ul>
         </div>
         <div class="project">
@@ -369,7 +369,7 @@
           <ul>
             <li>Designed comprehensive deep learning-based waste classification system using convolutional neural networks and transfer learning, achieving 95%+ accuracy across multiple waste categories for environmental sustainability applications.</li>
             <li>Created scalable ML pipeline architecture for real-time waste sorting, incorporating edge computing deployment, IoT sensor integration, and automated feedback mechanisms for continuous model improvement.</li>
-            <li><strong>Key Skills:</strong> Python, Data Analysis, Data Mining, Data Modeling, Deep Learning, SQL, Excel, Power BI, Azure Data Factory, Databricks, Azure ML Studio, Azure SQL</li>
+            <li><strong>Key Skills:</strong> Python, Data Analysis, Data Mining, Data Modeling, Deep Learning, Excel, Power BI, Azure Data Factory, Databricks, Azure ML Studio, Azure SQL</li>
           </ul>
         </div>
         <div class="project">
