--- a/try.html
+++ b/try.html
@@ -355,7 +355,7 @@
             <li><span class="certification-institution">Hugging Face</span> - AI Agents Fundamentals</li>
             <li><span class="certification-institution">IBM</span> - Watsonx.ai Technical Essentials</li>
             <li><span class="certification-institution">Neo4j</span> - Neo4j & LLM Fundamentals</li>
-            <li><span class="certification-institution">IBM</span> - Watsonx Essentials</li>
+            <li><span class="certification-institution">IBM</span> - IBM AI Associate Data Scientist</li>
             <li><span class="certification-institution">Microsoft & LinkedIn</span> - Generative AI</li>
             <li><span class="certification-institution">Microsoft</span> - Azure Machine Learning</li>
             <li><span class="certification-institution">Stanford University</span> - Machine Learning</li>
