--- a/try.html
+++ b/try.html
@@ -361,11 +361,12 @@
             <li><span class="certification-institution">Stanford University</span> - Machine Learning</li>
             <li><span class="certification-institution">Duke University</span> - DevOps, DataOps, MLOps</li>
             <li><span class="certification-institution">LangChain Academy</span> - LangSmith</li>
-            <li><span class="certification-institution">AWS</span> - AWS Cloud</li>
+            <li><span class="certification-institution">IBM</span> - IBM Solution Architect for Kubernetes & IBM Cloud Paks/li>
             <li><span class="certification-institution">Udemy</span> - Project Management Fundamentals</li>
             <li><span class="certification-institution">Udemy</span> - Product Management Fundamentals</li>
             <li><span class="certification-institution">Udemy</span> - MCP (Model Context Protocol)</li>
             <li><span class="certification-institution">Microsoft</span> - SQL Server</li>
+            <li><span class="certification-institution">AWS</span> - AWS Cloud</li>
           </ul>
         </div>
       </div>
