--- a/doc.html
+++ b/doc.html
@@ -463,7 +463,7 @@
             <span class="certification-bullet">•</span>
             <div class="certification-content">
               <span class="certification-institution">IBM</span>
-              <span class="certification-course">Solution Architect for Kubernetes</span>
+              <span class="certification-course">IBM Solution Architect for Kubernetes & IBM Cloud Paks</span>
             </div>
           </div>
           <div class="certification-item">
@@ -669,4 +669,4 @@
     }
   </script>
 </body>
-  </html>
+                </html>
