--- a/doc.html
+++ b/doc.html
@@ -462,7 +462,7 @@
             <span class="certification-bullet">•</span>
             <div class="certification-content">
               <span class="certification-institution">IBM</span>
-              <span class="certification-course">IBM Solution Architect for Kubernetes & IBM Cloud Paks</span>
+              <span class="certification-course">Solution Architect for Kubernetes & Cloud Paks</span>
             </div>
           </div>
           <div class="certification-item">
