--- a/doc.html
+++ b/doc.html
@@ -653,7 +653,7 @@
         const content = `
 CHANDAN KUMAR
 IIT | Super30 | Data Scientist | IBM
-Phone: +91-9199000200 | Email: ckism.iit@gmail.com | LinkedIn: linkedin.com/in/chandaniit
+Phone: +91-9199000200 | Email: chandaniitismg@gmail.com | LinkedIn: linkedin.com/in/chandaniit
 
 PROFESSIONAL SUMMARY
 IIT graduate and Data Scientist with around 8 years of expertise in delivering AI-driven solutions across finance, banking, energy, and environmental sectors. Skilled in Machine Learning, Deep Learning, Generative AI, LLMs, NLP, RAG, vector databases, and MLOps, with hands-on expertise in Python, TensorFlow, FastAPI, and cloud platforms (AWS, Azure, GCP). Proven ability to design and deploy scalable ML pipelines, working with tools like Databricks, ML Studio, SageMaker, Bedrock, Vertex AI, LangChain, LangGraph, CrewAI, Hugging Face, Docker, and Kubernetes. Experienced in building robust ETL workflows and delivering analytics through Tableau and Power BI. Passionate about leveraging AI to drive automation, innovation, and business value.
