--- a/doc.html
+++ b/doc.html
@@ -334,7 +334,7 @@
         </div>
         <div class="contact-item">
           <span class="icon"><i class="fas fa-envelope"></i></span>
-          <a href="mailto:chandaniitismg@gmail.com">ckism.iit@gmail.com</a>
+          <a href="mailto:chandaniitismg@gmail.com">chandaniitismg@gmail.com</a>
         </div>
         <div class="contact-item">
           <span class="icon"><i class="fab fa-linkedin-in"></i></span>
