--- a/doc.html
+++ b/doc.html
@@ -462,7 +462,7 @@
             <span class="certification-bullet">•</span>
             <div class="certification-content">
               <span class="certification-institution">IBM</span>
-              <span class="certification-course">Watsonx.ai Technical Essentials</span>
+              <span class="certification-course">IBM Generative& Agentic AI Foundation</span>
             </div>
           </div>
           <div class="certification-item col-2">
