--- a/doc.html
+++ b/doc.html
@@ -421,11 +421,11 @@
               <span class="certification-course">IBM Solution Architect for Kubernetes & IBM Cloud Paks</span>
             </div>
           </div>
-          <div class="certification-item col-1">
+          <div class="certification-item col-2">
             <span class="certification-bullet">•</span>
             <div class="certification-content">
-              <span class="certification-institution">Neo4j</span>
-              <span class="certification-course">Neo4j & LLM Fundamentals</span>
+              <span class="certification-institution">Microsoft & LinkedIn</span>
+              <span class="certification-course">Generative AI</span>
             </div>
           </div>
           <div class="certification-item col-3">
@@ -479,6 +479,21 @@
               <span class="certification-course">Azure Machine Learning</span>
             </div>
           </div>
+          
+          <div class="certification-item col-1">
+            <span class="certification-bullet">•</span>
+            <div class="certification-content">
+              <span class="certification-institution">Neo4j</span>
+              <span class="certification-course">Neo4j & LLM Fundamentals</span>
+            </div>
+          </div>
+          <div class="certification-item col-2">
+            <span class="certification-bullet">•</span>
+            <div class="certification-content">
+              <span class="certification-institution">Udemy</span>
+              <span class="certification-course">Project Management Fundamentals</span>
+            </div>
+          </div>
           <div class="certification-item col-3">
             <span class="certification-bullet">•</span>
             <div class="certification-content">
@@ -499,6 +514,13 @@
             <div class="certification-content">
               <span class="certification-institution">Udemy</span>
               <span class="certification-course">MCP (Model Context Protocol)</span>
+            </div>
+          </div>
+          <div class="certification-item col-3">
+            <span class="certification-bullet">•</span>
+            <div class="certification-content">
+              <span class="certification-institution">AWS</span>
+              <span class="certification-course">AWS Cloud</span>
             </div>
           </div>
         </div>
