--- a/doc.html
+++ b/doc.html
@@ -424,8 +424,8 @@
           <div class="certification-item col-2">
             <span class="certification-bullet">•</span>
             <div class="certification-content">
-              <span class="certification-institution">Microsoft & LinkedIn</span>
-              <span class="certification-course">Generative AI</span>
+              <span class="certification-institution">Neo4j</span>
+              <span class="certification-course">Neo4j & LLM Fundamentals</span>
             </div>
           </div>
           <div class="certification-item col-3">
@@ -483,15 +483,15 @@
           <div class="certification-item col-1">
             <span class="certification-bullet">•</span>
             <div class="certification-content">
-              <span class="certification-institution">Neo4j</span>
-              <span class="certification-course">Neo4j & LLM Fundamentals</span>
+              <span class="certification-institution">Udemy</span>
+              <span class="certification-course">Product Management Fundamentals</span>
             </div>
           </div>
           <div class="certification-item col-2">
             <span class="certification-bullet">•</span>
             <div class="certification-content">
               <span class="certification-institution">Udemy</span>
-              <span class="certification-course">Project Management Fundamentals</span>
+              <span class="certification-course">MCP (Model Context Protocol)</span>
             </div>
           </div>
           <div class="certification-item col-3">
