--- a/doc.html
+++ b/doc.html
@@ -390,7 +390,7 @@
         </div>
       </div>
       <div class="section">
-        <div class="section-title"><i class="fas fa-certificate"></i><span>Certifications</span></div>
+        <div class="section-title"><i class="fas fa-certificate"></i><span>Certifications/Badges</span></div>
         <div class="certifications-grid">
           <div class="certification-item col-1">
             <span class="certification-bullet">•</span>
