--- a/doc.html
+++ b/doc.html
@@ -507,9 +507,9 @@
       <div class="section">
         <div class="section-title"><i class="fas fa-code-branch"></i><span>Key Projects</span></div>
         <div class="project">
-          <div class="project-title"><strong>MARC (Multi-Agent Resource Coordinator)</strong>, <span class="company-name">IBM</span></div>
+          <div class="project-title"><strong>Watsonx Orchestrate</strong>, <span class="company-name">IBM</span></div>
           <div class="project-description">
-            <div class="project-line">• Developed multiple agents for IBM's MARC platform, enhancing multi-agent collaboration and workflow automation using AI Governance principles.</div>
+            <div class="project-line">• Developed multiple agents for IBM's wxo platform, enhancing multi-agent collaboration and workflow automation using AI Governance principles.</div>
             <div class="project-line">• Utilized advanced LLMs for intelligent task orchestration and agent selection, streamlining enterprise workflows with scalable multi-agent AI systems.</div>
           </div>
         </div>
