--- a/anjali.html
+++ b/anjali.html
@@ -302,6 +302,10 @@
       <div class="section">
         <div class="section-title"><i class="fas fa-graduation-cap"></i><span>Education</span></div>
         <div class="education-item">
+          <div class="education-details"><strong>IIIT Lucknow</strong> -  M.Tech, Data Science</div>
+          <div class="education-period">Aug 2023 - Jul 2025</div>
+        </div>
+        <div class="education-item">
           <div class="education-details"><strong>GCE Gaya</strong> - B.Tech, Computer Science Engineering</div>
           <div class="education-period">Aug 2016 - Jul 2020</div>
         </div>
@@ -326,6 +330,13 @@
       <div class="section">
         <div class="section-title"><i class="fas fa-briefcase"></i><span>Professional Experience</span></div>
         <div class="job">
+          <div class="job-title"><strong>Tech Mahindra</strong> - Senior Software Engineer <span class="job-period">Aug 2025 - Present</span></div>
+          <ul>
+            <li>Architected ML solutions for Fortune 500 clients, building scalable data pipelines with cloud and distributed computing frameworks.</li>
+            <li>Developed AI-powered document processing and customer segmentation systems, improving operational workflows by 30% through advanced analytics.</li>
+          </ul>
+        </div>
+        <div class="job">
           <div class="job-title"><strong>AMD</strong> - CoOp/Intern <span class="job-period">Jul 2024 - Jun 2025</span></div>
           <ul>
             <li>Developed multiple agents for AMD's AVIVA platform, enhancing multi-agent collaboration and workflow automation using AI Governance principles.</li>
@@ -336,9 +347,8 @@
         <div class="job">
           <div class="job-title"><strong>TCS</strong> - Systems Engineer <span class="job-period">Apr 2021 - Nov 2023</span></div>
           <ul>
-            <li>Architected and deployed 5+ sophisticated ML models for enterprise clients across banking and finance sectors, achieving consistently 90%+ accuracy through advanced ensemble methods and feature engineering techniques.</li>
-            <li>Built high-performance data processing pipelines capable of handling 10TB+ daily data volumes using Apache Spark, Databricks, and optimized ETL workflows for real-time analytics and batch processing requirements.</li>
-            <li>Developed cutting-edge NLP solutions implementing transformer-based architectures and custom tokenization strategies, resulting in 60% processing time reduction for document classification and sentiment analysis tasks.</li>
+            <li>Architected 5+ enterprise-grade ML and Transformer-based NLP solutions for banking, delivering 90%+ accuracy and a 60% reduction in processing time through advanced ensemble techniques and custom tokenization.</li>
+            <li>Engineered high-throughput data pipelines using Apache Spark and Databricks to ingest 10TB+ daily, optimizing ETL workflows to support both real-time analytics and massive batch processing.</li>
           </ul>
         </div>
       </div>
