--- a/anjali.html
+++ b/anjali.html
@@ -355,7 +355,7 @@
       <div class="section">
         <div class="section-title"><i class="fas fa-code-branch"></i><span>Key Projects</span></div>
         <div class="project">
-          <div class="project-title"><strong>AVIVA</strong>, <span class="company-name">AMD</span></div>
+          <div class="project-title"><strong>AVIVA</strong>, <span class="company-name">Tech Mahindra</span></div>
           <ul>
             <li>Built sophisticated multi-agent system leveraging large language models and small language models techniques, reducing manual workflow processes by 70% through intelligent task automation and decision-making capabilities.</li>
             <li>Applied comprehensive AI Governance frameworks, including bias detection, fairness metrics, and ethical deployment guidelines, ensuring responsible AI implementation across enterprise-level production systems.</li>
@@ -363,7 +363,7 @@
           </ul>
         </div>
         <div class="project">
-          <div class="project-title"><strong>PdfGPT</strong>, <span class="company-name">TCS</span></div>
+          <div class="project-title"><strong>PdfGPT</strong>, <span class="company-name">AMD</span></div>
           <ul>
             <li>Deployed advanced text summarization system using transformer-based models and custom attention mechanisms, improving document processing workflows by 80% through intelligent content extraction and contextual understanding.</li>
             <li>Built interactive conversational AI interface for intelligent document querying, implementing vector databases, semantic search capabilities, and natural language understanding for enhanced user experience.</li>
