--- a/anjali.html
+++ b/anjali.html
@@ -288,7 +288,7 @@
             </div>
             <div class="contact-item" style="flex: none; display: flex; align-items: center; gap: 4px;">
               <span class="icon"><i class="fas fa-phone"></i></span>
-              <span style="font-size: 11px; font-weight: bold;">+91-7033441492</span>
+              <span style="font-size: 11px; font-weight: bold;">+91-8688841302</span>
             </div>
           </div>
         </div>
@@ -297,7 +297,7 @@
     <div class="content">
       <div class="section">
         <div class="section-title"><i class="fa-regular fa-address-card"></i><span>Professional Summary</span></div>
-        <p>Experienced Data Scientist with around <strong>3 years</strong> of expertise in delivering AI-driven solutions across finance, banking and environmental sectors. Skilled in Machine Learning, Deep Learning, Generative AI, LLMs, NLP, RAG, vector databases, and MLOps, with hands-on expertise in Python, C++, TensorFlow, FastAPI, R, SQL and cloud platforms (AWS, Azure, GCP). Proven ability to design and deploy scalable ML pipelines, working with tools like Databricks, ML Studio, SageMaker, Bedrock, Vertex AI, LangChain, LangGraph, CrewAI, Hugging Face, Docker, and Kubernetes. Experienced in building robust ETL workflows and delivering analytics through Tableau and Power BI. Passionate about leveraging AI to drive automation, innovation, and business value.</p>
+        <p><strong>M.Tech in Data science from IIIT Lucknow</strong>Experienced Data Scientist with around <strong>3 years</strong> of expertise in delivering AI-driven solutions across finance, banking and environmental sectors. Skilled in Machine Learning, Deep Learning, Generative AI, LLMs, NLP, RAG, vector databases, and MLOps, with hands-on expertise in Python, C++, TensorFlow, FastAPI, R, SQL and cloud platforms (AWS, Azure, GCP). Proven ability to design and deploy scalable ML pipelines, working with tools like Databricks, ML Studio, SageMaker, Bedrock, Vertex AI, LangChain, LangGraph, CrewAI, Hugging Face, Docker, and Kubernetes. Experienced in building robust ETL workflows and delivering analytics through Tableau and Power BI. Passionate about leveraging AI to drive automation, innovation, and business value.</p>
       </div>
       <div class="section">
         <div class="section-title"><i class="fas fa-graduation-cap"></i><span>Education</span></div>
